tests/paczka1/small_fuzzy/53825799.err
Error in line 6: IGMM S219 85,8
Error in line 8: IGMM A595 88,9
Error in line 10: IGMM A537 24,1
Error in line 3: axeAscfp0CR A537 86,7
Error in line 15: axeAscfp0CR A595 32,3
